fix text overflow on some elements

--- a/src/styles/components/card.css
+++ b/src/styles/components/card.css
@@ -141,6 +141,8 @@
 .card .title {
     font-weight: 500;
     font-size: var(--large-font);
+
+    overflow-wrap: anywhere;
 }
 
 .card .footer .text, .card .footer .icon, .watch .rating .rating-text, .watch .rating .icon {
